Cambio de precios y texto en los productos

--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -89,37 +89,14 @@
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Iniciate en el mundo del comic con nada más ni nada menos que la primera entrega de
+                                    los Vengadores, lanzada en 1963, con una copia original en perfecto estado y a un
+                                    precio asequible.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$45000</a>
                         </button>
                     </div>
                 </div>
@@ -135,37 +112,14 @@
                         <div class="collapse" id="collapseExample1">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    El reinicio de los Nuevos 52 de DC te permitirá disfrutar de los comics de la
+                                    Justice League sin tener que leer decadas de comics antiguos. Consigue la primera
+                                    entrega de la Justice League y disfruta a tus superheroes favoritos de DC.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$5500</a>
                         </button>
                     </div>
                 </div>
@@ -181,37 +135,13 @@
                         <div class="collapse" id="collapseExample2">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Disfrutá la nueva historia de Spider-Man, la cual se lanzó de forma especial
+                                    al mercado conmemorando los 60 años del personaje.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$5500</a>
                         </button>
                     </div>
                 </div>
@@ -227,37 +157,13 @@
                         <div class="collapse" id="collapseExample3">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Conocé la nueva aventura de las Tortugas Ninja con la primera entrega de la nueva
+                                    serie de comics producida por IDW.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$5500</a>
                         </button>
                     </div>
                 </div>
@@ -281,7 +187,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$7000</a>
                         </button>
                     </div>
                 </div>
