--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$1800</a>
                         </button>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$3500</a>
                         </button>
                     </div>
                 </div>
@@ -144,37 +144,14 @@
                         <div class="collapse" id="collapseExample2">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Monkey D. Luffy sueña con encontrar el One Piece y convertirse en el Rey de los
+                                    Piratas. Acompaña a Luffy y a su tripulación pirata en un viaje emocinante por todo
+                                    el mundo para encontrar el gran tesoro de Gold Roger, el famoso Rey de los Piratas.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$1800</a>
                         </button>
                     </div>
                 </div>
@@ -190,37 +167,15 @@
                         <div class="collapse" id="collapseExample3">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Adentrate en el sombrio mundo de Chainsaw-Man y conoce a Denji, un humano común que
+                                    consigue el poder del demonio motosierra luego de volverse su amigo. Denji aceptará
+                                    su poder y lo utilizará para cumplir su sueño: tener una vida normal que pueda
+                                    disfrutar.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$1800</a>
                         </button>
                     </div>
                 </div>
@@ -236,37 +191,13 @@
                         <div class="collapse" id="collapseExample4">
                             <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Vinland Saga nos cuenta la historia de Thorfinn y su viaje por el mundo vikingo para
+                                    vengar la muerte de su padre.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$1800</a>
                         </button>
                     </div>
                 </div>
