--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -89,37 +89,14 @@
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body carDiv">
                                 <p class="card-text">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Aclamado por la crítica y el público, Elden Ring te transporta al sombrio mundo de
+                                    las Tierras Intermedias, lleno de criaturas que derrotar y una compleja historia que
+                                    desentrañar.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$25000</a>
                         </button>
                     </div>
                 </div>
@@ -135,37 +112,15 @@
                         <div class="collapse" id="collapseExample1">
                             <div class="card card-body carDiv">
                                 <p class="card-text">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War
+                                    (2018). Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los
+                                    nueve reinos en búsqueda de respuestas, mientras que las fuerzas asgardianas se
+                                    preparan para una batalla profetizada que terminará con el mundo.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$25000</a>
                         </button>
                     </div>
                 </div>
@@ -182,37 +137,14 @@
                         <div class="collapse" id="collapseExample2">
                             <div class="card card-body carDiv">
                                 <p class="card-text">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Explora tierras distantes, enfrenta máquinas más grandes y alucinantes y encuentra
+                                    nuevas e increíbles tribus al regresar al mundo postapocalíptico de futuro lejano de
+                                    Horizon.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$18000</a>
                         </button>
                     </div>
                 </div>
@@ -236,7 +168,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$25000</a>
                         </button>
                     </div>
                 </div>
@@ -260,7 +192,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$18000</a>
                         </button>
                     </div>
                 </div>
