--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -79,7 +79,7 @@
 
             <div class="lista1">
                 <div class="card text-center divLista cartaLista" style="width: 18rem;">
-                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top" alt="magic the gathering portada">
+                    <img src="../img/81qJfjRS5lS.avif" class="card-img-top" alt="magic the gathering portada">
                 </div>
                 <div class="card text-center">
                     <div class="card-body">
