--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h2>Recomendados</h2>
             <div class="lista">
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
+                    <img src="./img/the-last-of-us-parte-i-202261012304123_1.avif" class="card-img-top"
                         alt="the last of us portada">
                     <div class="card-body">
                         <h5 class="card-title">The Last of Us Parte 1</h5>
