--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
+                    <img src="../img/the-last-of-us-parte-i-202261012304123_1.avif" class="card-img-top"
                         alt="the last of us portada">
                 </div>
                 <div class="card text-center ">
