--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top" alt="batman portada">
+                    <img src="./img/batman_broma_asesina_deluxe_pvc.avif" class="card-img-top" alt="batman portada">
                     <div class="card-body">
                         <h5 class="card-title">Batman The Killing Joke</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
