--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/91U157yeMWL.jpg" class="card-img-top" alt="justice league portada">
+                    <img src="../img/91U157yeMWL.avif" class="card-img-top" alt="justice league portada">
                     <div class="card-body">
                         <h5 class="card-title">The New 52 Justice League #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/clean.jpg" class="card-img-top" alt="spiderman portada">
+                    <img src="../img/clean.avif" class="card-img-top" alt="spiderman portada">
                     <div class="card-body">
                         <h5 class="card-title">The Amazing Spider-Man #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top" alt="batman portada">
+                    <img src="../img/batman_broma_asesina_deluxe_pvc.avif" class="card-img-top" alt="batman portada">
                     <div class="card-body">
                         <h5 class="card-title">Batman The Killing Joke</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample4" role="button"
