--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                    <img src="./img/a3ww7-n5hpx.avif" class="card-img-top"
                         alt="death note portada">
                     <div class="card-body">
                         <h5 class="card-title">Death Note #10</h5>
