--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -79,7 +79,7 @@
 
             <div class="lista">
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                    <img src="../img/a3ww7-n5hpx.avif" class="card-img-top"
                         alt="death note portada">
                     <div class="card-body">
                         <h5 class="card-title">Death Note #10</h5>
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/Volumen_1 (1).webp" class="card-img-top" alt="vinland saga portada">
+                    <img src="../img/ax4vu-es1p8.avif" class="card-img-top" alt="vinland saga portada">
                     <div class="card-body">
                         <h5 class="card-title">Vinland Saga #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample4" role="button"
