--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -174,7 +174,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/D_NQ_NP_939213-MLA53178668757_012023-O.jpg" class="card-img-top"
+                    <img src="../img/a6ztg-774xi.avif" class="card-img-top"
                         alt="fifa 23 portada">
                     <div class="card-body">
                         <h5 class="card-title">FIFA 23</h5>
