--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -79,7 +79,7 @@
 
             <div class="lista">
                 <div class="card text-center divLista cartaLista" style="width: 18rem;">
-                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top" alt="magic the gathering portada">
+                    <img src="../img/81qJfjRS5lS.avif" class="card-img-top" alt="magic the gathering portada">
                     <div class="card-body">
                         <h5 class="card-title">Magic the Gathering</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="card text-center divLista cartaLista" style="width: 18rem;">
-                    <img src="../img/ETCO_display_EN-600x600.jpg" class="card-img-top" alt="yugioh portada">
+                    <img src="../img/aoq71-kcksw.avif" class="card-img-top" alt="yugioh portada">
                     <div class="card-body">
                         <h5 class="card-title">YUGIOH Eternity Code</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="card text-center divLista cartaLista" style="width: 18rem;">
-                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" class="card-img-top"
+                    <img src="../img/a7bkb-d98is.avif" class="card-img-top"
                         alt="pokemon portada">
                     <div class="card-body">
                         <h5 class="card-title">Pokemon Card Game</h5>
