--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <meta name="description"
-        content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
+        content="Descubrí los nuevos productos que tenemos para ofrecerte, al mejor precio del mercado. Envios a todo el país.">
     <meta name="keywords"
         content="novedades, nuevo, ofertas, juegos nuevos, new">
     <title>XEROX | Novedades</title>
