cambio de precios

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
                                 <p class="card-text" style="max-width: 300px;">
                                     Remake del aclamado juego de Naughty Dog, el cual narra el viaje de Joel y Ellie por
                                     todo Estados Unidos con la esperanza de lograr conseguir una cura para la epidemia
-                                    que arrasó su mundo y convirtió a las personas en zombies.
+                                    que arrasó su mundo e infectó a gran parte de la humanidad.
                                 </p>
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$25000</a>
                         </button>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$3500</a>
                         </button>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$18000</a>
                         </button>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                             </div>
                         </div>
                         <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
+                            <a href="">$1800</a>
                         </button>
                     </div>
                 </div>
