--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -132,7 +132,12 @@
                     <div class="enviar contactoDiv">
                         <button class="btn btn-primary btn-block" type="submit" value="Enviar" name="contact">
                             ENVIAR
-                            <span class="js-form-spinner" style="display:none;"><svg class="icon-inline icon-spin ml-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path d="M460.115 373.846l-6.941-4.008c-5.546-3.202-7.564-10.177-4.661-15.886 32.971-64.838 31.167-142.731-5.415-205.954-36.504-63.356-103.118-103.876-175.8-107.701C260.952 39.963 256 34.676 256 28.321v-8.012c0-6.904 5.808-12.337 12.703-11.982 83.552 4.306 160.157 50.861 202.106 123.67 42.069 72.703 44.083 162.322 6.034 236.838-3.14 6.149-10.75 8.462-16.728 5.011z"></path></svg></span>
+                            <span class="js-form-spinner" style="display:none;"><svg class="icon-inline icon-spin ml-3"
+                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512">
+                                    <path
+                                        d="M460.115 373.846l-6.941-4.008c-5.546-3.202-7.564-10.177-4.661-15.886 32.971-64.838 31.167-142.731-5.415-205.954-36.504-63.356-103.118-103.876-175.8-107.701C260.952 39.963 256 34.676 256 28.321v-8.012c0-6.904 5.808-12.337 12.703-11.982 83.552 4.306 160.157 50.861 202.106 123.67 42.069 72.703 44.083 162.322 6.034 236.838-3.14 6.149-10.75 8.462-16.728 5.011z">
+                                    </path>
+                                </svg></span>
                         </button>
                     </div>
                 </fieldset>
@@ -145,6 +150,11 @@
                 src="../img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
                 src="../img/icons8-facebook.svg" alt="icono facebook"></a>
+        <a href="tel: (11) 2668-2533" class="footerRedes">
+            <img src="../img/icons8-whatsapp.svg" alt="icono whatsapp"></a>
+        <p>
+            Copyright © 2023 XEROX
+        </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
