--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -205,6 +205,9 @@
                 src="../img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
                 src="../img/icons8-facebook.svg" alt="icono facebook"></a>
+        <p>
+            Copyright © 2023 XEROX
+        </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
