implementación de arrays y objetos

--- a/index.html
+++ b/index.html
@@ -269,4 +269,7 @@
     <script src="js/main.js"></script>
 </body>
 
+<!DOCTYPE html>
+
+<p>Esta página es <strong> muy sencilla. </strong></p>
 </html>
