--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 XEROX
             </a>
         </h1>
+        <nav class="navbar">
+            <div class="container-fluid ">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2 input " type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn" id="btnSearch" type="submit">Search</button>
+                </form>
+                <div class="caja"></div>
+            </div>
+        </nav>
 
         <nav class="navbar">
             <div>
@@ -122,7 +131,7 @@
             </div>
 
             <h2>Recomendados</h2>
-            <div class="lista">
+            <div class="lista ">
                 <div class="card text-center divLista" style="width: 18rem;">
                     <img src="./img/the-last-of-us-parte-i-202261012304123_1.avif" class="card-img-top"
                         alt="the last of us portada">
@@ -196,8 +205,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="./img/a6ztg-774xi.avif" class="card-img-top"
-                        alt="fifa 23 portada">
+                    <img src="./img/a6ztg-774xi.avif" class="card-img-top" alt="fifa 23 portada">
                     <div class="card-body">
                         <h5 class="card-title">FIFA 23</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button"
@@ -220,8 +228,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="./img/a3ww7-n5hpx.avif" class="card-img-top"
-                        alt="death note portada">
+                    <img src="./img/a3ww7-n5hpx.avif" class="card-img-top" alt="death note portada">
                     <div class="card-body">
                         <h5 class="card-title">Death Note #10</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample4" role="button"
@@ -265,11 +272,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="js/main.js"></script>
 </body>
 
-<!DOCTYPE html>
-
-<p>Esta página es <strong> muy sencilla. </strong></p>
 </html>
