inclusión de eventos en js

--- a/index.html
+++ b/index.html
@@ -20,15 +20,6 @@
                 XEROX
             </a>
         </h1>
-        <nav class="navbar">
-            <div class="container-fluid ">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2 input " type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn" id="btnSearch" type="submit">Search</button>
-                </form>
-                <div class="caja"></div>
-            </div>
-        </nav>
 
         <nav class="navbar">
             <div>
@@ -67,7 +58,11 @@
                             <a href="./paginas/contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
+                    <button class="btnShop" >
+                        <img src="./img/icons8-carrito-de-compras-48.svg" alt="">
+                    </button>
                 </div>
+                
             </div>
         </nav>
     </header>
