--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -15,11 +15,21 @@
 
 <body>
     <header class="container-fluid fixed-top">
-        <h1>
-            <a href="../index.html" class="tituloXerox" id="xerox">
-                XEROX
-            </a>
-        </h1>
+        <div class="divHeader">
+            <h1>
+                <a href="../index.html" class="tituloXerox" id="xerox">
+                    XEROX
+                </a>
+            </h1>
+            <nav class="navbar searcher">
+                <div class="container-fluid">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btnSearch" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
+        </div>
 
         <nav class="navbar">
             <div>
