--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -83,8 +83,8 @@
                 </li>
             </ul>
 
-            <form>
-                <fieldset class="contactoInfo">
+            <form id="form">
+                <fieldset class="contactoInfo" id="formLogin">
                     <div class="form-floating contactoDiv">
                         <input type="text" name="nombre" class="form-control" placeholder="Nombre" required>
                         <label for="floatingTextarea">NOMBRE</label>
@@ -109,15 +109,15 @@
                     <div class="form-floating contactoDiv">
                         <select name="pais" class="form-select" id="floatingSelect"
                             aria-label="Floating label select example" required>
-                            <option value="Arg">Argentina</option>
-                            <option value="Ch">Chile</option>
-                            <option value="Br">Brasil</option>
-                            <option value="Uru">Uruguay</option>
-                            <option value="Par">Paraguay</option>
-                            <option value="Bol">Bolivia</option>
-                            <option value="Per">Perú</option>
-                            <option value="Ecu">Ecuador</option>
-                            <option value="Col">Colombia</option>
+                            <option value="Argentina">Argentina</option>
+                            <option value="Chile">Chile</option>
+                            <option value="Brasil">Brasil</option>
+                            <option value="Uruguay">Uruguay</option>
+                            <option value="Paraguay">Paraguay</option>
+                            <option value="Bolivia">Bolivia</option>
+                            <option value="Perú">Perú</option>
+                            <option value="Ecuador">Ecuador</option>
+                            <option value="Colombia">Colombia</option>
                         </select>
                         <label for="floatingSelect">PAÍS</label>
                     </div>
@@ -160,6 +160,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
         </script>
+
+<script src="../js/main1.js"></script>
 </body>
 
 </html>
